# course-rp2040-examples

./: .gitignore
adc/: CMakeLists.txt  adc.c
adc_2/: CMakeLists.txt  adc_2.c
adc_dma/: CMakeLists.txt  adc_dma.c
bmp280_i2c/: CMakeLists.txt  bmp280_i2c.c
gpio_input/: gpio_input.c
gpio_input_IRQ/: CMakeLists.txt  gpio_input_IRQ.c
gpio_input_masked/: CMakeLists.txt  gpio_input_masked.c
gpio_iput/: CMakeLists.txt
gpio_output/: CMakeLists.txt  gpio_output.c
gpio_output_mask/: CMakeLists.txt  gpio_output_mask.c
gpio_output_masked_2/: CMakeLists.txt  gpio_output_mask.c
hello_rp2040/: CMakeLists.txt  hello_rp2040.c
i2c_scanner/: CMakeLists.txt  main.c
multicore/: CMakeLists.txt  multicore.c
pio_blink0/: CMakeLists.txt  blink.pio  main.c
pio_blink1/: CMakeLists.txt  main.c
pio_pwm/: CMakeLists.txt  main.c
projeto_template/: CMakeLists.txt
pwm/: CMakeLists.txt  pwm.c
pwm_2/: CMakeLists.txt  pwm.c
pwm_led_fade/: CMakeLists.txt  pwm_led_fade.c
temp_sensor/: CMakeLists.txt  temp_sensor.c
timer_blink/: CMakeLists.txt  main.c
